# Stingray

./: .gitignore  .gitkeep  README.md  example.sg  insertion_sort.sg  syntax.ebnf
compiler/: CMakeLists.txt  main.cpp  stingray.cf
compiler/interpretation/: Expressions.cpp  InterpretationVisitor.cpp  InterpretationVisitor.h  Statements.cpp  TopLevelDeclarations.cpp  Unused.cpp
compiler/syntax/: Absyn.C  Absyn.C.bak  Absyn.H  Absyn.H.bak  Bison.H  Lexer.C  Makefile  Parser.C  Parser.H  Parser.H.bak  Printer.C  Printer.C.bak  Printer.H  Printer.H.bak  Skeleton.C  Skeleton.C.bak  Skeleton.H  Skeleton.H.bak  Test.C  stingray.l  stingray.l.bak  stingray.y  stingray.y.bak
compiler/typecheck/: BaseTypes.cpp  Classes.cpp  Expressions.cpp  Statements.cpp  StingrayTypes.cpp  StingrayTypes.h  TopLevelDeclarations.cpp  TypeChecker.cpp  TypeChecker.h  Unused.cpp
final_lang_spec/: example.stingray
lang_spec/: specification.md  syntax.ebnf
test/: bubble_sort.sg  fibonacci_for.sg  fibonacci_recursive.sg  max_in_array.sg  min_in_array.sg  multiple_tests.sg  simple_test.sg  tower_of_hanoi.sg
vscode_syntax_highlighting/stingray/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode_syntax_highlighting/stingray/syntaxes/: stingray.tmLanguage.json
